# Switchbot_utility

./: .gitignore  README.md  pyproject.toml
docs/source/: conf.py  switchbot_utility.rst
src/switchbot_utility/: __init__.py  battery_mixin.py  onoff_mixin.py  switchbot.py  switchbot_air_purifier_pm25.py  switchbot_air_purifier_pm25_table.py  switchbot_air_purifier_voc.py  switchbot_air_purifier_voc_table.py  switchbot_battery_circulator_fan.py  switchbot_blind_tilt.py  switchbot_circulator_fan.py  switchbot_curtain.py  switchbot_curtain3.py  switchbot_evapolative_humidifier.py  switchbot_evapolative_humidifier_autorefill.py  switchbot_floor_cleaning_robot_s10.py  switchbot_floor_cleaning_robot_s20.py  switchbot_floor_lamp.py  switchbot_hub3.py  switchbot_k10_plus_pro_combo.py  switchbot_k11_plus.py  switchbot_k20_plus_pro.py  switchbot_keypad_vision.py  switchbot_keypad_vision_pro.py  switchbot_lock.py  switchbot_lock_lite.py  switchbot_lock_pro.py  switchbot_lock_ultra.py  switchbot_meter_pro.py  switchbot_meter_pro_co2.py  switchbot_mini_robot_vacuum_k10_plus.py  switchbot_mini_robot_vacuum_k10_plus_pro.py  switchbot_outdoor_meter.py  switchbot_plug_mini_eu.py  switchbot_presence_sensor.py  switchbot_rgbic_neon_wire_light.py  switchbot_rgbic_neon_wire_rope_light.py  switchbot_rgbicww_floor_lamp.py  switchbot_rgbicww_strip_light.py  switchbot_robot_vacuum_cleaner_s1.py  (+3 more)
